Fixed misaligned #zoom-out-button

--- a/chrome/browser/browser.css
+++ b/chrome/browser/browser.css
@@ -2223,16 +2223,16 @@ menupopup:-moz-locale-dir(rtl) > .unified-nav-forward[_moz-menuactive] {
 
 #zoom-out-button {
   list-style-image: url(chrome://browser/skin/Toolbar-new.png);
-  -moz-image-region: rect(4px, 12px, 8px, 0);
+  -moz-image-region: rect(0, 12px, 12px, 0);
 }
 #zoom-out-button:hover {
-  -moz-image-region: rect(17px, 12px, 21px, 0);
+  -moz-image-region: rect(13px, 12px, 25px, 0);
 }
 #zoom-out-button[disabled] {
-  -moz-image-region: rect(30px, 12px, 34px, 0);
+  -moz-image-region: rect(26px, 12px, 38px, 0);
 }
 #zoom-out-button:hover:active {
-  -moz-image-region: rect(43px, 12px, 47px, 0);
+  -moz-image-region: rect(39px, 12px, 51px, 0);
 }
 
 #zoom-in-button {
